[package]
name = "ssl-log-tools"
version = "0.1.0"
authors = ["Devin Schwab <digidevin@gmail.com>"]
edition = "2018"

[build-dependencies]
glob = { version = "0.2" }
protoc-rust = "2.2"

[dependencies]
clap = "2.32"
byteorder = "1"
chrono = "0.4"
failure = { version = "0.1" }
indicatif = "0.11"
lazy_static = "1.2"
socket2 = { version = "0.3", features = ["reuseport"] }
protobuf = { version = "2.3" }

[dev-dependencies]
# Test deps
proptest = "0.9"
tempfile = "3"
